# investment-agent

./: .env.example  .gitignore  .mcp.json.example  README.md  agents.md  pyproject.toml
company_research/: README.md
company_research/MU/: monitoring.yaml  thesis.md
config/: peer_universe.yaml  portfolio.yaml  preferences.yaml  watchlist.yaml
docs/: 0607.progress.md  0608.md  ATTRIBUTION_QUALITY_AND_TRACEABILITY_PRD_CN.md  ATTRIBUTION_QUALITY_AND_TRACEABILITY_TECH_PLAN_CN.md  BOOK_PIPELINE_CN.md  CLAIM_EVIDENCE_SEMANTIC_SUPPORT_PRD_CN.md  CLAIM_EVIDENCE_SEMANTIC_SUPPORT_TECH_PLAN_CN.md  CODEX_VPS_SANDBOX_RUNBOOK_CN.md  EXECUTION_PLAN_P1.md  INVESTMENT_RESEARCH_AGENT_SPEC.md  LOOPING_RESEARCH_ENGINE_PRD_CN.md  LOOPING_RESEARCH_ENGINE_TECH_PLAN_CN.md  P1_FINAL_NARRATIVE.md  P1_FINAL_NARRATIVE_CN.md  P2_INVESTMENT_RESEARCH_WORKBENCH_CN.md  PROGRAMMER_PANORAMA_CN.md  PROJECT_PANORAMA_AND_MILESTONES.md  PROJECT_PANORAMA_AND_MILESTONES_CN.md  REPORT_NARRATIVE_QUALITY_TECH_PLAN_CN.md  RESEARCH_CASE_EVAL.md  architecture.md  w5-experiment-design.md  闭环能力.md
docs/methodology/: README.md  architecture.md  cross-server-cases.md  experiment-decision-framework.md  goal-drift-control.md  llm-hop-minimization.md
docs/showcase/: case-study-corporate-actions.md  elevator-pitch-and-3min-script.md  index.md  resume-snippet.md
docs/w5/: 0607.start.task.md  0607.task.02.md  SA_SLIDING_WINDOW_SKELETON.md  W5_DESIGN_FOR_REVIEW.md
experiments/desc_ab/: README.md  mcp-v0.json  mcp-v1.json
experiments/w5_compression/: S0_baseline_ABANDONED_natural_density.jsonl  eval_probes.json  (+6 more)
(+98 files in other folders)
