[project]
name = "investment-agent"
version = "0.1.0"
description = "AI 投资助理 - 基于 Claude Agent SDK + MCP"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "mcp",
    "anthropic",
    "httpx",
    "pyyaml",
    "yfinance",
    "python-dotenv",
    "feedparser",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
